01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw01-service
spec:
  selector:
    app: hw01-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
