01/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hw01-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: bit.homework
    http:
      paths:
        - path: /bitapp/perevozov($|/)(.*)
          backend:
            serviceName: hw01-service
            servicePort: 8000
